--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WolfPack - Howl Your Thoughts</title>
+  <link rel="stylesheet" href="styles.css">
   <style>
     /* Basic styling for the Howl system */
     body {
